# openenv-clinical-trial

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  dashboard.html  debug_reward.py  entrypoint.sh  eval_compare.py  models.py  openenv.yaml  openenv_repo_names.md  plot_rewards.py  pyproject.toml  train.py  train_colab.ipynb  train_colab_v2.ipynb  train_colab_v2.py  train_colab_v3.ipynb  train_kaggle.ipynb
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: BRANCH_PR_MATRIX.md  KnowledgeBase.md  ROADMAP.md  adaptive_difficulty_spec.md  audit_and_fix_plan_v4.md  benchmark_protocol.md  blog.md  competitive_analysis.md  curriculum_policy.md  dashboard_metrics.md  evaluation_criteria.md  grounding.md  grpo_v3_guide.md  hack_info.md  milestone_map.md  mini_blog_draft.md  onsite_checklist.md  onsite_roadmap.md  phase_workflow.md  pitch_notes.md  problem_statement.md  project status.md  prompt.md  reward_spec.md  scenario_cards.md  story_arc.md  training_log.md  training_runbook.md  verification_spec.md
docs/internal/: KnowledgeBase.md  ROADMAP.md  comparison.md  evaluation_report_template.md  extra_info.txt  hack_info.md  hf_run_guide.md  pitch_notes.md  pre_onsite_checklist.md  pre_onsite_roadmap.md  project status.md  resources.md  storytelling_assets.md  submission_checklist.md  suyash_handoff_template.md  training_runbook.md
docs/internal/rl_book/: README.md  chapter_01_what_is_ai.md  chapter_02_reinforcement_learning.md  chapter_03_language_models.md  chapter_04_the_mission.md  chapter_05_the_environment.md  chapter_06_hidden_state.md  chapter_07_rewards.md  chapter_08_rules.md  chapter_09_simulator.md  chapter_10_curriculum.md  chapter_11_grpo.md  chapter_12_training_infra.md  chapter_13_full_pipeline.md  (+3 more)
environment/: app.py  episode_manager.py  models.py
environment/curriculum/: __init__.py
environment/rule_engine/: __init__.py
environment/simulator/: __init__.py
outputs/eval/: eval_comparison_report.json
outputs/grpo/: reward_log.csv  training_summary.json
outputs/verify_hf/: reward_log.csv  training_summary.json
scripts/: check_hf_space.py
server/: __init__.py  app.py  config.py  dashboard.py  environment.py  episode_manager.py  judge.py  logger.py  noise_model.py  phase_detector.py
server/curriculum/: __init__.py  adversarial_designer.py  controller.py  scenarios.py
server/grounding/: rpact_validation.json
server/logging/: __init__.py
server/reward/: __init__.py  reward_computer.py  shaping.py
server/rules/: __init__.py  fda_rules.py  prerequisite_rules.py
server/scripts/: __init__.py
server/simulator/: __init__.py  output_generator.py  power_calculator.py  transition_engine.py  trial_simulator.py
tests/: test_adversarial_designer.py  test_config.py  test_curriculum_controller.py  test_episode_logger_wiring.py  test_episode_manager_compliance.py  test_exception_handling.py  test_integration.py  test_judge.py  test_noise_model.py  test_output_generator.py  test_phase_detector.py  test_smoke.py  test_train_action_plan.py  test_trial_simulator.py
