[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-clinical-trial"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.2.1",
    "openenv-core==0.2.3",
    "scipy==1.13.0",
    "numpy==1.26.4",
    "matplotlib==3.8.4",
    "pandas==2.2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "models*"]

[project.optional-dependencies]
dev = [
    "ruff==0.4.4",
    "pytest==8.2.0",
    "httpx==0.27.0",
]
train = [
    "trl==0.29.0",
    "peft>=0.11",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "accelerate>=0.27.0",
]
# unsloth requires trl<=0.24.0 which conflicts with trl==0.29.0; install separately if needed
train-unsloth = [
    "unsloth",
]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
"train.py" = ["E501"]
"eval_compare.py" = ["E501"]
"server/judge.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
